syntax = "proto3";

import "internal.proto";

package gossip;

service Gossip {
  rpc Exchange(GossipData) returns (GossipData) {}
}

message GossipData {
  uint64 node_id = 1;
  uint64 sequence_id = 2;
  map<uint64, string> peer_addresses = 3;
  string address = 4;
  uint64 meta_leader_id = 5;
  map<uint64, searchify.PeerState> node_liveness = 6;
  searchify.Timestamp updated_at = 7;
}